Cleaned the cells

--- a/AMEX Default Prediction/amex-default-prediction.ipynb
+++ b/AMEX Default Prediction/amex-default-prediction.ipynb
@@ -286,21 +286,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Now let's do the hypertuning\n",
-    "Since there are a lot of parameters to hypertune on, we will do it hypertuning over subset of hyperparameters."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The score is not good. Let's try to train using last statement only"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -340,29 +325,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Drop the columns you dropped in training dataset and declare the categorical varibles"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-12-19T17:54:53.150068Z",
-     "iopub.status.busy": "2025-12-19T17:54:53.149494Z",
-     "iopub.status.idle": "2025-12-19T17:54:53.219422Z",
-     "shell.execute_reply": "2025-12-19T17:54:53.218557Z",
-     "shell.execute_reply.started": "2025-12-19T17:54:53.150045Z"
-    },
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "cols_to_keep = X_train.columns\n",
-    "X_test = test_df[cols_to_keep].copy()\n",
-    "\n",
-    "for c in cat_features:\n",
-    "    X_test[c] = X_test[c].astype('category')"
+    "### Drop the columns that were dropped in training dataset and declare the categorical varibles"
    ]
   },
   {
@@ -427,12 +390,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The amex metric for the test data is around 0.04, which means that our model is not performing good on the test data like it was doing\n",
-    "### on the validation data. The reason is that the validation data had the data for the same customer_IDs as were there in the training dataset\n",
-    "### and they must be correlated somehow as they are the data form a time series. The test data also has a time series data as there are 924621 entries, but \n",
-    "### only 75231 unique columns. Let's train only the on the the last statement of the training dataset and predict using\n",
-    "### the last statement of the dataset and fill the same target values for the all the statements for that customer - this sounds wrong because initially a customer's features might be good\n",
-    "### and could get worse so the prediction in the test and validation data should be according to each statement"
+    "The amex metric for the test data is around 0.04, which means that our model is not performing good on the test data like it was doing on the validation data. The reason is that the validation data had the data for the same customer_IDs as were there in the training dataset and they must be correlated somehow as they are the data form a time series. The test data also has a time series data as there are 924621 entries, but only 75231 unique columns. Let's train only the on the the last statement of the training dataset and predict using the last statement of the dataset and fill the same target values for the all the statements for that customer - this sounds wrong because initially a customer's features might be good and could get worse so the prediction in the test and validation data should be according to each statement"
    ]
   },
   {
@@ -823,13 +781,6 @@
     "\n",
     "# print(\"Best AMEX:\", study.best_trial.value)\n",
     "# print(\"Best Params:\", study.best_trial.params)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "alpha is cl"
    ]
   },
   {
